Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyO+Xh2HGHD/zIyzh5XHabcA",
+      "authorship_tag": "ABX9TyMD3TftClkiaNSSEUkyKzg6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8854,50 +8854,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uIzAR78kPyO7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3524f6f6-ba00-4cf0-85dc-6c2671671266"
+        "id": "uIzAR78kPyO7"
       },
       "source": [
-        "def solve(x):\n",
-        "    global result\n",
-        "\n",
-        "    result[x] = True\n",
-        "\n",
-        "    if x % 3 == 0:\n",
-        "        solve(x//3)\n",
-        "    elif x % 2 == 0:\n",
-        "        solve(x//2)\n",
-        "    \n",
-        "    if x > 1:\n",
-        "        solve()\n",
+        "import sys\n",
+        "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
-        "    \n",
+        "    global result\n",
         "    n = int(input())\n",
         "\n",
-        "    result = [False] * (n + 1)\n",
-        "    \n",
-        "    solve(n,[])\n",
-        "    print(result)\n",
+        "    result = [[] for _ in range(n+1)]\n",
+        "    result[1].append(1)\n",
+        "    for i in range(2, n+1):\n",
+        "        result[i] = result[i-1] + [i]\n",
         "\n",
+        "        if not i % 3 and len(result[i//3]) + 1 <  len(result[i]):\n",
+        "            result[i] = result[i//3] + [i]\n",
+        "        elif not i % 2 and len(result[i//2]) + 1 <  len(result[i]):\n",
+        "            result[i] = result[i//2] + [i]\n",
+        "\n",
+        "    print(len(result[n])-1) \n",
+        "    print(*result[n][::-1])\n",
         "    \n",
         "if __name__ == '__main__':\n",
         "    main()"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n",
-            "[[2], [3]]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8911,25 +8895,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NAynpyVBbaBW",
-        "outputId": "7d8686de-dc3e-4ee1-dd98-f0dd2851f1ca"
+        "id": "NAynpyVBbaBW"
       },
       "source": [
-        "print(1e6 + 1)"
+        ""
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1000001.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -10630,10 +10602,23 @@
         "    main()      "
       ],
       "metadata": {
-        "id": "iss3HyEL6hgB"
+        "id": "iss3HyEL6hgB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1921a9a9-8be9-4713-f07f-f9baa8fdfb5a"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "143 11\n",
+            "GOOD\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
