Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMD3TftClkiaNSSEUkyKzg6",
+      "authorship_tag": "ABX9TyPYBScoPUMtnWyD4As8Q5Xs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8854,34 +8854,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uIzAR78kPyO7"
+        "id": "uIzAR78kPyO7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7354f610-e8ea-402f-9e2a-a8cc553a676f"
       },
       "source": [
         "import sys\n",
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
-        "    global result\n",
         "    n = int(input())\n",
         "\n",
-        "    result = [[] for _ in range(n+1)]\n",
-        "    result[1].append(1)\n",
+        "    result = [[0, []] for _ in range(n+1)]\n",
+        "\n",
+        "    result[1][0] = 0\n",
+        "    result[1][1] = [1]\n",
+        "\n",
         "    for i in range(2, n+1):\n",
-        "        result[i] = result[i-1] + [i]\n",
+        "        result[i][0] = result[i-1][0] + 1\n",
+        "        result[i][1] = result[i-1][1] + [i]\n",
         "\n",
-        "        if not i % 3 and len(result[i//3]) + 1 <  len(result[i]):\n",
-        "            result[i] = result[i//3] + [i]\n",
-        "        elif not i % 2 and len(result[i//2]) + 1 <  len(result[i]):\n",
-        "            result[i] = result[i//2] + [i]\n",
+        "        if not i % 3 and   result[i//3][0] + 1 <  result[i][0]:\n",
+        "            result[i][0] = result[i//3][0] + 1\n",
+        "            result[i][1] = result[i//3][1] + [i]\n",
         "\n",
-        "    print(len(result[n])-1) \n",
-        "    print(*result[n][::-1])\n",
+        "        if not i % 2 and result[i//2][0] + 1 <  result[i][0]:\n",
+        "            result[i][0] = result[i//2][0] + 1\n",
+        "            result[i][1] = result[i//2][1] + [i]\n",
+        "\n",
+        "    print(result[n][0])\n",
+        "    print(*result[n][1][::-1])\n",
         "    \n",
         "if __name__ == '__main__':\n",
         "    main()"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "3\n",
+            "10 9 3 1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -10623,7 +10643,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 10699번"
       ],
       "metadata": {
         "id": "gdYfXoAM6hi9"
@@ -10632,10 +10652,73 @@
     {
       "cell_type": "code",
       "source": [
+        "import sys\n",
+        "import datetime\n",
+        "\n",
+        "#input = sys.stdin.readline\n",
+        "def main(): \n",
+        "    t = datetime.datetime.now() + datetime.timedelta(hours=9)\n",
+        "    \n",
+        "    print(t.strftime('%Y-%m-%d'))\n",
+        "        \n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()      "
+      ],
+      "metadata": {
+        "id": "ByQiuzsm6hi-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ed70bb8f-72bb-47ea-ea2f-31d31df8e72c"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2022-02-10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "INUAzGUwEfNW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "ByQiuzsm6hi-"
+        "id": "jvSoEBdZEfNX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "0Jhnh4oREfQ4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "g-gpbe3fEfQ9"
       },
       "execution_count": null,
       "outputs": []
