Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyPYBScoPUMtnWyD4As8Q5Xs",
+      "authorship_tag": "ABX9TyO9Oav1hdlCNHFBa0AVObBx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8854,11 +8854,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uIzAR78kPyO7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7354f610-e8ea-402f-9e2a-a8cc553a676f"
+        "id": "uIzAR78kPyO7"
       },
       "source": [
         "import sys\n",
@@ -8891,17 +8887,7 @@
         "    main()"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "10\n",
-            "3\n",
-            "10 9 3 1\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8909,19 +8895,58 @@
         "id": "Ul4mJr0gbaBW"
       },
       "source": [
-        "#### "
+        "####  14002번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NAynpyVBbaBW"
+        "id": "NAynpyVBbaBW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71c1fa1e-a63f-4359-cdca-cc931eb718c1"
       },
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    n = int(input())\n",
+        "    s = list(map(int, input().split()))\n",
+        "\n",
+        "    res = [1] * n\n",
+        "\n",
+        "    for i in range(n):\n",
+        "        for j in range(i):\n",
+        "            if s[i] > s[j] and res[i] < res[j] + 1:\n",
+        "                res[i] = res[j] + 1\n",
+        "\n",
+        "    t = max(res)\n",
+        "    print(t)\n",
+        "    result = []\n",
+        "    for i in range(n-1, -1, -1):\n",
+        "        if res[i] == t:\n",
+        "            result.append(s[i])\n",
+        "            t -= 1\n",
+        "    print(*result[::-1])\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n",
+            "10 20 10 30 20 50\n",
+            "4\n",
+            "10 20 30 50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -10672,7 +10697,7 @@
         },
         "outputId": "ed70bb8f-72bb-47ea-ea2f-31d31df8e72c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
