Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -71,7 +71,6 @@
         "dWdByFb4I_M4",
         "RN4IB3xOI_QP",
         "X70TgeGFI_UZ",
-        "oQWV6kNSTJ6F",
         "BJL-EjWYTJ6G",
         "LoeeUEld-pdv",
         "fejTVL9O-qAq",
@@ -128,6 +127,8 @@
         "Xc2rVYZ1DWAq",
         "_jfJBLzSDWEK",
         "oPD8cNOfDWHz",
+        "YmNhCb79bUUH",
+        "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -163,7 +164,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyO9Oav1hdlCNHFBa0AVObBx",
+      "authorship_tag": "ABX9TyNm7mczGBVvGfLqKYAlXRAY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8901,11 +8902,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NAynpyVBbaBW",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "71c1fa1e-a63f-4359-cdca-cc931eb718c1"
+        "id": "NAynpyVBbaBW"
       },
       "source": [
         "import sys\n",
@@ -8934,19 +8931,8 @@
         "if __name__ == '__main__':\n",
         "    main()"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "6\n",
-            "10 20 10 30 20 50\n",
-            "4\n",
-            "10 20 30 50\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8954,7 +8940,7 @@
         "id": "jrkS22SSbaEm"
       },
       "source": [
-        "#### "
+        "####  14003번"
       ]
     },
     {
@@ -8963,7 +8949,55 @@
         "id": "EaT4sZmrbaEm"
       },
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def binary_search(arr, t):\n",
+        "    start = 0\n",
+        "    end = len(arr) - 1\n",
+        "\n",
+        "    while True:\n",
+        "        if start >= end:\n",
+        "            mid = (start + end) // 2\n",
+        "            return mid\n",
+        "        \n",
+        "        mid = (start + end) // 2\n",
+        "\n",
+        "        if arr[mid] < t:\n",
+        "            start = mid + 1\n",
+        "        else:\n",
+        "            end = mid\n",
+        "\n",
+        "    return mid\n",
+        "\n",
+        "def main():\n",
+        "    n = int(input())\n",
+        "    s = list(map(int, input().split()))\n",
+        "\n",
+        "    res = [-1e9 - 1] \n",
+        "    dp  = [0] * (n)\n",
+        "    max_value = 0\n",
+        "    for i in range(n):\n",
+        "        if res[-1] < s[i]:\n",
+        "            res.append(s[i])\n",
+        "            dp[i] = len(res) - 1\n",
+        "            max_value = dp[i]\n",
+        "        else:\n",
+        "            t = binary_search(res, s[i])\n",
+        "            dp[i] = t\n",
+        "            res[t] = s[i]\n",
+        "\n",
+        "    print(max_value)\n",
+        "    result = []\n",
+        "    for i in range(n-1,-1,-1):\n",
+        "        if dp[i] == max_value:\n",
+        "            result.append(s[i])\n",
+        "            max_value -= 1\n",
+        "\n",
+        "    print(*result[::-1])\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "execution_count": null,
       "outputs": []
@@ -8974,13 +9008,132 @@
         "id": "oO7fwVrFbaHm"
       },
       "source": [
-        "#### "
+        "####  9252번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "twAOzqyBbaHm"
+      },
+      "source": [
+        "# LCS(longest common subsequence) 알고리즘\n",
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    m = input()\n",
+        "    n = input()\n",
+        "    M, N = len(m), len(n)\n",
+        "\n",
+        "    dp = [[0] * (M + 1) for _ in range(N + 1)]\n",
+        "\n",
+        "    for i in range(N):\n",
+        "        for j in range(M):\n",
+        "            if m[j] == n[i]:\n",
+        "                dp[i+1][j+1] = dp[i][j] + 1\n",
+        "            else:\n",
+        "                dp[i+1][j+1] = max(dp[i][j+1], dp[i+1][j])\n",
+        "    \n",
+        "    print(dp[N][M])\n",
+        "\n",
+        "    if dp[N][M] == 0:\n",
+        "        return\n",
+        "\n",
+        "    result = []\n",
+        "    \n",
+        "    while True:\n",
+        "        if M < 1 or N < 1:\n",
+        "            break\n",
+        "\n",
+        "        if dp[N][M] == dp[N-1][M]:\n",
+        "            N -= 1\n",
+        "        elif dp[N][M] == dp[N][M-1]:\n",
+        "            M -= 1\n",
+        "        else:\n",
+        "            result.append(m[M-1])\n",
+        "            N -= 1\n",
+        "            M -= 1\n",
+        "\n",
+        "    for i in result[::-1]:\n",
+        "        print(i, end='')\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()\n",
+        "\n",
+        "# 반례 - 역추적에서 dp[N][M] 와 dp[N-1][M]를 비교하는 이유\n",
+        "# ASDWADGFRQWE\n",
+        "# GHASDQWEZZZZZ"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MtI0wdqr9jcg"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9MXqaWES9jcl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a20844a8-a5af-46a8-b909-274dbf95885b"
+      },
+      "source": [
+        "ACAYKP\n",
+        "CAPCAK"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cntgaSCQ9jgV"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1dOzJ83V9jgV"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O6fCGfGf9jjd"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T6CvoMoY9jji"
       },
       "source": [
         ""
