Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -164,7 +164,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyNm7mczGBVvGfLqKYAlXRAY",
+      "authorship_tag": "ABX9TyP+GWfXQvfaCjH4PWrZC9xv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9022,8 +9022,8 @@
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
-        "    m = input()\n",
-        "    n = input()\n",
+        "    m = input().rstrip('\\n')\n",
+        "    n = input().rstrip('\\n')\n",
         "    M, N = len(m), len(n)\n",
         "\n",
         "    dp = [[0] * (M + 1) for _ in range(N + 1)]\n",
@@ -9074,32 +9074,73 @@
         "id": "MtI0wdqr9jcg"
       },
       "source": [
-        "#### "
+        "####  (*****)2618번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9MXqaWES9jcl",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a20844a8-a5af-46a8-b909-274dbf95885b"
+        "id": "9MXqaWES9jcl"
       },
       "source": [
-        "ACAYKP\n",
-        "CAPCAK"
+        "# https://velog.io/@jini_eun/%EB%B0%B1%EC%A4%80-2618%EB%B2%88-%EA%B2%BD%EC%B0%B0%EC%B0%A8-Java-Python\n",
+        "\n",
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def manhattan(x,y):\n",
+        "    return abs(x[0] - y[0]) + abs(x[1] - y[1])\n",
+        "\n",
+        "def solve(i,j):\n",
+        "    if w < i or w < j:  return 0\n",
+        "    if dp[i][j] != -1:  return dp[i][j]\n",
+        "\n",
+        "    next = max(i,j) + 1\n",
+        "    \n",
+        "    dist1 = manhattan(case[next], case[i])\n",
+        "    dist2 = manhattan(case[next], case[j])\n",
+        "\n",
+        "    dp[i][j] = min(solve(next,j) + dist1, solve(i,next) + dist2)\n",
+        "    return dp[i][j]\n",
+        "\n",
+        "def backtracking(i,j):\n",
+        "    if w < i or w < j:  return 0\n",
+        "\n",
+        "    next = max(i,j) + 1\n",
+        "    \n",
+        "    dist1 = manhattan(case[next], case[i])\n",
+        "    dist2 = manhattan(case[next], case[j])\n",
+        "\n",
+        "    if dp[next][j]+dist1 < dp[i][next]+dist2:\n",
+        "        print(1)\n",
+        "        backtracking(next,j)\n",
+        "    else:\n",
+        "        print(2)\n",
+        "        backtracking(i,next)\n",
+        "\n",
+        "    return\n",
+        "\n",
+        "def main():\n",
+        "    global n, w, dp, case\n",
+        "\n",
+        "    n = int(input())\n",
+        "    w = int(input())\n",
+        "    \n",
+        "    dp = [[-1] * (w+2) for _ in range(w+2)]\n",
+        "\n",
+        "    case = [[1,1],[n,n]]\n",
+        "    for _ in range(w):\n",
+        "        case.append(list(map(int, input().split())))\n",
+        "\n",
+        "    print(solve(0,1))\n",
+        "    backtracking(0,1)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
