Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -164,7 +164,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyP+GWfXQvfaCjH4PWrZC9xv",
+      "authorship_tag": "ABX9TyPsUYJ6rLnQV8ANNzm2kJld",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -406,6 +406,77 @@
       ],
       "metadata": {
         "id": "D918BX5Wm069"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####  2525번(백준 제출x)"
+      ],
+      "metadata": {
+        "id": "geO9_B3Nxcv-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "def main():\n",
+        "    a, b = map(int, input().split())\n",
+        "    c = int(input())\n",
+        "\n",
+        "    if b + c > 60:\n",
+        "        b += c - 60\n",
+        "        a += 1\n",
+        "    else:\n",
+        "        b += c\n",
+        "    \n",
+        "    print(a, b)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "d8egGl0xxcv-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####  2480번(백준 제출x)"
+      ],
+      "metadata": {
+        "id": "z4u_ewTjxc6g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "def main():\n",
+        "    t = list(map(int, input().split()))\n",
+        "    setted_t = list(set(t))\n",
+        "\n",
+        "    if len(setted_t) == 1:\n",
+        "        print(10000 + t[0]*1000)\n",
+        "    elif len(setted_t) == 2:\n",
+        "        for i in setted_t:\n",
+        "            t.remove(i)\n",
+        "        print(1000+t[0]*100)\n",
+        "    else:\n",
+        "        print(max(t)*100)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "HKy8rcu9xc6g"
       },
       "execution_count": null,
       "outputs": []
@@ -10885,27 +10956,15 @@
         "    main()      "
       ],
       "metadata": {
-        "id": "ByQiuzsm6hi-",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ed70bb8f-72bb-47ea-ea2f-31d31df8e72c"
+        "id": "ByQiuzsm6hi-"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2022-02-10\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1958번 : LCS3"
       ],
       "metadata": {
         "id": "INUAzGUwEfNW"
@@ -10914,7 +10973,32 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    a = input().rstrip('\\n')\n",
+        "    b = input().rstrip('\\n')\n",
+        "    c = input().rstrip('\\n')\n",
+        "\n",
+        "\n",
+        "\n",
+        "    A, B, C = len(a), len(b), len(c)\n",
+        "\n",
+        "    dp = [[[0] * (C + 1) for _ in range(B + 1)] for _ in range(A+1)]\n",
+        "\n",
+        "    for i in range(A):\n",
+        "        for j in range(B):\n",
+        "            for k in range(C):\n",
+        "                if a[i] == b[j] == c[k]:\n",
+        "                    dp[i+1][j+1][k+1] = dp[i][j][k] + 1\n",
+        "                else:\n",
+        "                    dp[i+1][j+1][k+1] = max(dp[i][j+1][k+1], dp[i+1][j][k+1], dp[i+1][j+1][k])\n",
+        "\n",
+        "    print(dp[A][B][C])\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "metadata": {
         "id": "jvSoEBdZEfNX"
@@ -10934,10 +11018,92 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "abcdefghijklmn\n",
+        "bdefg\n",
+        "efg"
       ],
       "metadata": {
         "id": "g-gpbe3fEfQ9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "fl_uNvW_3BaE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "pyQU4LgS3BaE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "yomX-o9S3CIf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "JiOKwiee3CIg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "UB0weMHW3CsX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ktAcY3_B3CsX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "bs9X4C093C2h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "vFils6kt3C2h"
       },
       "execution_count": null,
       "outputs": []
