--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -128,7 +128,6 @@
         "_jfJBLzSDWEK",
         "oPD8cNOfDWHz",
         "YmNhCb79bUUH",
-        "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -164,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyPsUYJ6rLnQV8ANNzm2kJld",
+      "authorship_tag": "ABX9TyNyPk2iQptsWmf8Ibdz4dqW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11009,7 +11008,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 13711번:LCS4"
       ],
       "metadata": {
         "id": "0Jhnh4oREfQ4"
@@ -11018,20 +11017,82 @@
     {
       "cell_type": "code",
       "source": [
-        "abcdefghijklmn\n",
-        "bdefg\n",
-        "efg"
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def binary_search(arr, t):\n",
+        "    start = 0\n",
+        "    end = len(arr) - 1\n",
+        "\n",
+        "    while True:\n",
+        "        if start >= end:\n",
+        "            mid = (start + end) // 2\n",
+        "            return mid\n",
+        "        \n",
+        "        mid = (start + end) // 2\n",
+        "\n",
+        "        if arr[mid] < t:\n",
+        "            start = mid + 1\n",
+        "        else:\n",
+        "            end = mid\n",
+        "\n",
+        "    return mid\n",
+        "\n",
+        "def main():\n",
+        "    n = int(input())\n",
+        "    \n",
+        "    a = list(map(int, input().split()))\n",
+        "    b = list(map(int, input().split()))\n",
+        "    \n",
+        "    dict_b = {}\n",
+        "    for i in range(n):\n",
+        "        dict_b[b[i]] = i\n",
+        "\n",
+        "\n",
+        "    result = []\n",
+        "    for i in range(n):\n",
+        "        result.append(dict_b[a[i]])\n",
+        "\n",
+        "    res = [-1]\n",
+        "    max_value = 0\n",
+        "    for i in range(n):\n",
+        "        if res[-1] < result[i]:\n",
+        "            res.append(result[i])\n",
+        "            max_value = len(res) - 1\n",
+        "        else:\n",
+        "            t = binary_search(res, result[i])\n",
+        "            res[t] = result[i]\n",
+        "\n",
+        "    print(max_value)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "metadata": {
-        "id": "g-gpbe3fEfQ9"
+        "id": "g-gpbe3fEfQ9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "105dae46-ef6b-4ac7-e86e-54f1b6e77039"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "2 1 5 3 4\n",
+            "1 5 2 3 4\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 15482번:한글LCS"
       ],
       "metadata": {
         "id": "fl_uNvW_3BaE"
@@ -11040,7 +11101,28 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    a = input().rstrip('\\n')\n",
+        "    b = input().rstrip('\\n')\n",
+        "\n",
+        "    A, B = len(a), len(b)\n",
+        "\n",
+        "    dp = [[0] * (B + 1) for _ in range(A + 1)]\n",
+        "\n",
+        "    for i in range(A):\n",
+        "        for j in range(B):\n",
+        "            if a[i] == b[j]:\n",
+        "                dp[i+1][j+1] = dp[i][j] + 1\n",
+        "            else:\n",
+        "                dp[i+1][j+1] = max(dp[i][j+1], dp[i+1][j])\n",
+        "\n",
+        "    print(dp[A][B])\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "metadata": {
         "id": "pyQU4LgS3BaE"
@@ -11051,7 +11133,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1004번:어린왕자"
       ],
       "metadata": {
         "id": "yomX-o9S3CIf"
@@ -11060,7 +11142,36 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    x1, y1, x2, y2 = map(int, input().split())\n",
+        "    cnt = 0\n",
+        "\n",
+        "    n = int(input())    \n",
+        "    for _ in range(n):\n",
+        "        cx, cy, r = map(int, input().split())\n",
+        "\n",
+        "        dist_x = abs(x1 - cx) ** 2 + abs(y1 - cy) ** 2\n",
+        "        dist_y = abs(x2 - cx) ** 2 + abs(y2 - cy) ** 2\n",
+        "\n",
+        "        diff_x = dist_x - r ** 2\n",
+        "        diff_y = dist_y - r ** 2\n",
+        "\n",
+        "        if diff_x < 0 and diff_y < 0:\n",
+        "            continue\n",
+        "        elif diff_x > 0 and diff_y > 0:\n",
+        "            continue\n",
+        "        else:\n",
+        "            cnt += 1\n",
+        "    \n",
+        "    print(cnt)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    t = int(input())\n",
+        "    for _ in range(t):\n",
+        "        main()"
       ],
       "metadata": {
         "id": "JiOKwiee3CIg"
@@ -11071,7 +11182,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1015번:수열정렬"
       ],
       "metadata": {
         "id": "UB0weMHW3CsX"
@@ -11080,7 +11191,30 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    n = int(input())\n",
+        "    s = list(map(int, input().split()))\n",
+        "    t = sorted(s)\n",
+        "\n",
+        "    p = [False] * n\n",
+        "    visited = [False] * n\n",
+        "\n",
+        "    for i in range(n):\n",
+        "        for j in range(n):\n",
+        "            if visited[j]:\n",
+        "                continue\n",
+        "            \n",
+        "            if s[i] == t[j]:\n",
+        "                visited[j] = True\n",
+        "                p[i] = j\n",
+        "                break\n",
+        "    print(*p)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "metadata": {
         "id": "ktAcY3_B3CsX"
@@ -11100,7 +11234,13 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "metadata": {
         "id": "vFils6kt3C2h"
