Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyNyPk2iQptsWmf8Ibdz4dqW",
+      "authorship_tag": "ABX9TyOZmXSsM7Ml8cibaz5wjV5R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -427,12 +427,15 @@
         "    a, b = map(int, input().split())\n",
         "    c = int(input())\n",
         "\n",
-        "    if b + c > 60:\n",
-        "        b += c - 60\n",
-        "        a += 1\n",
+        "    if b + c >= 60:\n",
+        "        a += (b+c)//60\n",
+        "        b =(b+c)%60\n",
         "    else:\n",
         "        b += c\n",
-        "    \n",
+        "        \n",
+        "    if a > 23:\n",
+        "        a %= 24\n",
+        "        \n",
         "    print(a, b)\n",
         "\n",
         "if __name__ == '__main__':\n",
@@ -466,8 +469,8 @@
         "        print(10000 + t[0]*1000)\n",
         "    elif len(setted_t) == 2:\n",
         "        for i in setted_t:\n",
-        "            t.remove(i)\n",
-        "        print(1000+t[0]*100)\n",
+        "            t.remove(i)b\n",
+        "        print(1000+t[0]*100)8\n",
         "    else:\n",
         "        print(max(t)*100)\n",
         "\n",
