Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyOZmXSsM7Ml8cibaz5wjV5R",
+      "authorship_tag": "ABX9TyOOF6Z1hl5DcBbbQb5yUmDq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -412,7 +412,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####  2525번(백준 제출x)"
+        "####  2525번"
       ],
       "metadata": {
         "id": "geO9_B3Nxcv-"
@@ -450,7 +450,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####  2480번(백준 제출x)"
+        "####  2480번"
       ],
       "metadata": {
         "id": "z4u_ewTjxc6g"
@@ -461,7 +461,7 @@
       "source": [
         "import sys\n",
         "input = sys.stdin.readline\n",
-        "def main():\n",
+        "def main():n\n",
         "    t = list(map(int, input().split()))\n",
         "    setted_t = list(set(t))\n",
         "\n",
@@ -9221,7 +9221,7 @@
         "id": "cntgaSCQ9jgV"
       },
       "source": [
-        "#### "
+        "####  13913번"
       ]
     },
     {
@@ -9230,7 +9230,38 @@
         "id": "1dOzJ83V9jgV"
       },
       "source": [
-        ""
+        "from collections import deque\n",
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    max_val = int(1e5) + 1\n",
+        "    n, k = map(int, input().split())\n",
+        "\n",
+        "    dp = [[False, False]] * max_val\n",
+        "\n",
+        "    queue = deque()\n",
+        "    queue.append(n)\n",
+        "\n",
+        "    while queue:\n",
+        "        temp = queue.popleft()\n",
+        "\n",
+        "        if temp == k:\n",
+        "            print(dp[temp][0])\n",
+        "\n",
+        "            result = []\n",
+        "            for _ in range(dp[temp][0]+1):\n",
+        "                result.append(temp)\n",
+        "                temp = dp[temp][1]\n",
+        "            print(*result[::-1])\n",
+        "        \n",
+        "        for j in [temp - 1, temp + 1, temp * 2]:\n",
+        "            if 0 <= j < max_val and not dp[j][0]:\n",
+        "                queue.append(j)\n",
+        "                dp[j] = [dp[temp][0] + 1, temp]\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "execution_count": null,
       "outputs": []
@@ -9248,6 +9279,46 @@
       "cell_type": "code",
       "metadata": {
         "id": "T6CvoMoY9jji"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WelvvVZ_lfwo"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CXwKQ3Zvlfwp"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KkYaz69Slf0a"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KXUAxKZZlf0b"
       },
       "source": [
         ""
@@ -11072,25 +11143,10 @@
         "    main()"
       ],
       "metadata": {
-        "id": "g-gpbe3fEfQ9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "105dae46-ef6b-4ac7-e86e-54f1b6e77039"
+        "id": "g-gpbe3fEfQ9"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5\n",
-            "2 1 5 3 4\n",
-            "1 5 2 3 4\n",
-            "4\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -11105,7 +11161,7 @@
       "cell_type": "code",
       "source": [
         "import sys\n",
-        "input = sys.stdin.readline\n",
+        "input = sys.stdin.readline # sys로 코딩하니까 틀림. (Y?)\n",
         "\n",
         "def main():\n",
         "    a = input().rstrip('\\n')\n",
