Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyOOF6Z1hl5DcBbbQb5yUmDq",
+      "authorship_tag": "ABX9TyM8p8nEBJekQy8PDYxlxDRG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9232,13 +9232,13 @@
       "source": [
         "from collections import deque\n",
         "import sys\n",
-        "input = sys.stdin.readline\n",
+        "#input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
         "    max_val = int(1e5) + 1\n",
         "    n, k = map(int, input().split())\n",
         "\n",
-        "    dp = [[False, False]] * max_val\n",
+        "    dp = [[0, 0] for _ in range(max_val)] # False와 0의 차이?\n",
         "\n",
         "    queue = deque()\n",
         "    queue.append(n)\n",
@@ -9253,7 +9253,9 @@
         "            for _ in range(dp[temp][0]+1):\n",
         "                result.append(temp)\n",
         "                temp = dp[temp][1]\n",
+        "\n",
         "            print(*result[::-1])\n",
+        "            break\n",
         "        \n",
         "        for j in [temp - 1, temp + 1, temp * 2]:\n",
         "            if 0 <= j < max_val and not dp[j][0]:\n",
@@ -11284,10 +11286,60 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1173번"
       ],
       "metadata": {
         "id": "bs9X4C093C2h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    N, m, M, T, R = map(int, input().split())\n",
+        "\n",
+        "    hb = m\n",
+        "    work_t = 0\n",
+        "    rest_t = 0\n",
+        "\n",
+        "    while work_t != N:\n",
+        "        if hb + T <= M:\n",
+        "            work_t += 1\n",
+        "            hb += T\n",
+        "        else:\n",
+        "            rest_t += 1\n",
+        "            if hb == m:\n",
+        "                work_t = 0\n",
+        "                rest_t = -1\n",
+        "                break\n",
+        "            \n",
+        "            hb -= R\n",
+        "            if hb < m:\n",
+        "                hb = m\n",
+        "            \n",
+        "            \n",
+        "\n",
+        "    print(work_t + rest_t)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "vFils6kt3C2h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "BTEyIckftAC1"
       }
     },
     {
@@ -11302,7 +11354,33 @@
         "    main()"
       ],
       "metadata": {
-        "id": "vFils6kt3C2h"
+        "id": "5LDqG3JMtAC2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "2tJtkLAztAHb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "KKLplfqGtAHb"
       },
       "execution_count": null,
       "outputs": []
