--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyM8p8nEBJekQy8PDYxlxDRG",
+      "authorship_tag": "ABX9TyOJWEJjQ0RWwV0tTFp90OsI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11336,7 +11336,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1236번"
       ],
       "metadata": {
         "id": "BTEyIckftAC1"
@@ -11347,17 +11347,66 @@
       "source": [
         "import sys\n",
         "input = sys.stdin.readline\n",
-        "\n",
         "def main():\n",
+        "    n, m= map( int, input().split())\n",
+        "\n",
+        "    s = []\n",
+        "    row_t = [True] * m\n",
+        "    col_t = [True] * n\n",
+        "    for _ in range(n):\n",
+        "        s.append(input().rstrip('\\n'))\n",
+        "\n",
+        "    \n",
+        "    for i in range(n):\n",
+        "        for j in range(m):\n",
+        "            if s[i][j] == 'X':\n",
+        "                col_t[i] = False\n",
+        "                row_t[j] = False\n",
+        "\n",
+        "    res = 0\n",
+        "    if min(sum(col_t), sum(row_t)) == 0:\n",
+        "        res = max(sum(col_t), sum(row_t))\n",
+        "        print(res)\n",
+        "        return\n",
+        "\n",
+        "    for i in range(n):\n",
+        "        if col_t[i]:\n",
+        "            for j in range(m):\n",
+        "                if row_t[j]:\n",
+        "                    res += 1\n",
+        "                    col_t[i] = False\n",
+        "                    row_t[j] = False\n",
+        "                    break\n",
+        "\n",
+        "    print(res + sum(col_t) + sum(row_t))\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
       ],
       "metadata": {
-        "id": "5LDqG3JMtAC2"
+        "id": "5LDqG3JMtAC2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fb1e7fa6-fd7a-48ad-dea4-98e49f0ffdcb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4 4\n",
+            "..X.\n",
+            "..X.\n",
+            "..X.\n",
+            "..X.\n",
+            "[False, False, False, False]\n",
+            "[True, True, False, True]\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -11367,6 +11416,38 @@
       "metadata": {
         "id": "2tJtkLAztAHb"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "..X.\n",
+        "..X.\n",
+        "..X.\n",
+        "..X.\n",
+        "\n",
+        "....XXXX\n",
+        "........\n",
+        "XX.X.XX.\n",
+        "........\n",
+        "........"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vih2Cnc39ZJ_",
+        "outputId": "b3d8119c-e8e5-48b9-d1c5-e1d7b93e4882"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "....\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
