Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyOJWEJjQ0RWwV0tTFp90OsI",
+      "authorship_tag": "ABX9TyO3ei+odqdfg83X2pKjfExG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9274,19 +9274,92 @@
         "id": "O6fCGfGf9jjd"
       },
       "source": [
-        "#### "
+        "####  9019번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T6CvoMoY9jji"
+        "id": "T6CvoMoY9jji",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a1a3ff9b-2af6-45e5-de77-da6d116cf4f6"
       },
       "source": [
-        ""
+        "from collections import deque\n",
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "def D(x):\n",
+        "    x *= 2\n",
+        "    if x > 9999:\n",
+        "        x %= 10000\n",
+        "    return x\n",
+        "\n",
+        "def S(x):\n",
+        "    x -= 1\n",
+        "    if x < 0:\n",
+        "        x = 9999\n",
+        "    return x\n",
+        "\n",
+        "def R(x):\n",
+        "    x = str(x)\n",
+        "    x += '0'*(4-len(x)) + x[0]\n",
+        "    return int(x[-4:])\n",
+        "\n",
+        "def L(x):\n",
+        "    x = str(x)\n",
+        "    t = len(x)\n",
+        "    if  t < 4:\n",
+        "        return int(x + '0')\n",
+        "    else:\n",
+        "        return int(x[-3:] + x[0])\n",
+        "\n",
+        "def main():\n",
+        "    a, b = map(int, input().rstrip('\\n').split())\n",
+        "\n",
+        "    dp = [['',-1] for _ in range(10000)]\n",
+        "\n",
+        "    queue = deque()\n",
+        "    queue.append(a)\n",
+        "\n",
+        "    while queue:\n",
+        "        temp = queue.popleft()\n",
+        "        if temp == b:\n",
+        "            result = ''            \n",
+        "            while True:\n",
+        "                if temp == a:\n",
+        "                    break\n",
+        "                result += dp[temp][0]\n",
+        "                temp = dp[temp][1]\n",
+        "            print(result)\n",
+        "            break\n",
+        "\n",
+        "        for i,j in [[D(temp),'D'], [S(temp),'S'], [L(temp),'L'], [R(temp),'R']]:\n",
+        "            if dp[i][1] == -1:\n",
+        "                queue.append(i)\n",
+        "                dp[i] = [j, temp]\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    for _ in range(int(input())):\n",
+        "        main()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "1234 3412\n",
+            "LL\n",
+            "1000 1\n",
+            "L\n",
+            "1 16\n",
+            "DDDD\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -11390,7 +11463,7 @@
         },
         "outputId": "fb1e7fa6-fd7a-48ad-dea4-98e49f0ffdcb"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11438,7 +11511,7 @@
         "id": "vih2Cnc39ZJ_",
         "outputId": "b3d8119c-e8e5-48b9-d1c5-e1d7b93e4882"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
